[gd_scene load_steps=5 format=3 uid="uid://dg8xik3coe1hx"]

[ext_resource type="Script" uid="uid://bd5xovd2mib1s" path="res://code/scripts/hit_indicator.gd" id="1_cwfjm"]

[sub_resource type="Animation" id="Animation_u25xa"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_e1iyi"]
resource_name = "default"
length = 2.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7, 2),
"transitions": PackedFloat32Array(0.2, 5, 0),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(1, 1, 1), Vector3(0, 0, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nungg"]
_data = {
&"RESET": SubResource("Animation_u25xa"),
&"default": SubResource("Animation_e1iyi")
}

[node name="HitIndicator" type="Node3D"]
script = ExtResource("1_cwfjm")

[node name="Pivot" type="Node3D" parent="."]
transform = Transform3D(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)

[node name="PrimaryLabel" type="Label3D" parent="Pivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.25, 0)
billboard = 2
double_sided = false
no_depth_test = true
fixed_size = true
texture_filter = 2
modulate = Color(0.9, 0, 0, 0.8)
outline_modulate = Color(0, 0, 0, 0.8)
text = "0"
font_size = 16
outline_size = 4

[node name="SecondaryLabel" type="Label3D" parent="Pivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.25, 0)
billboard = 2
double_sided = false
no_depth_test = true
fixed_size = true
texture_filter = 2
modulate = Color(0.8, 0.8, 0.8, 0.3)
text = "0"
font_size = 16
outline_size = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_nungg")
}
autoplay = "default"
